test/param/vass/autoconvert-const-to-param.good
autoconvert-const-to-param.chpl:13: warning: here-2
autoconvert-const-to-param.chpl:14: error: done
